// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders as expected when passing a different color 1`] = `
<label
  className="
          lab-toggle
          lab-toggle--purple
           lab-toggle--disabled
        "
  htmlFor="test-toggle"
>
  <input
    checked={false}
    className="lab-toggle__input"
    disabled={true}
    id="test-toggle"
    name="test-toggle"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="lab-toggle__slider"
  />
</label>
`;

exports[`Toggle renders as expected when passing disabled as true 1`] = `
<label
  className="
          lab-toggle
          lab-toggle--teal
           lab-toggle--disabled
        "
  htmlFor="test-toggle"
>
  <input
    checked={false}
    className="lab-toggle__input"
    disabled={true}
    id="test-toggle"
    name="test-toggle"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="lab-toggle__slider"
  />
</label>
`;

exports[`Toggle renders with base props 1`] = `
<label
  className="
          lab-toggle
          lab-toggle--teal
          
        "
  htmlFor="test-toggle"
>
  <input
    checked={false}
    className="lab-toggle__input"
    id="test-toggle"
    name="test-toggle"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="lab-toggle__slider"
  />
</label>
`;
